@@ -146,6 +146,7 @@
     gmail dot com, Gustavo)
   . Fixed bug #53166 (Missing parameters in docs and reflection definition). 
     (Richard)
+  . Fixed bug #53854 (Missing constants for compression type). (Richard, Adam)
 
 06 Jan 2011, PHP 5.3.5
 - Fixed Bug #53632 (infinite loop with x87 fpu). (CVE-2010-4645) (Scott, 
